Additions:

Changes:

Fixes/Internal Changes:
Fixed occasional crash when trying to import text